kube-512/deploy1.yaml
apiVersion: v1
kind: Pod
metadata:
 name: aplicacao-nginx

spec:
 containers:
  - name: container-aplicacao-nginx
    image: nginx:1.8
    ports:
     - containerPort: 80
