kube-512/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginx-deployment

spec:
 selector:
  matchLabels:
   name: nginx-deployment
 replicas: 3
 template:
  metadata:
   labels:
    name: nginx-deployment
  spec:
   containers:
    - name: nginx-deployment
      image: nginx
      ports:
       - containerPort: 80
