kube-512/dexter-wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: aplicacao-wordpress
spec:
 selector:
  matchLabels:
   name: aplicacao-wordpress
 replicas: 3
 template:
  metadata:
   labels:
    name: aplicacao-wordpress
  spec:
   containers:
    - name: container-aplicacao-wordpress
      image: wordpress
      ports:
       - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
 name: my-nodeport
spec:
 selector:
  app: my-app
 type: NodePort
 ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30038
    protocol: TCP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: ingress-wordpress
spec:
 backend:
  serviceName: aplicacao-wordpress
  servicePort: 80
