kube-512/ingress-dexter.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: ingress-redirect 
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 backend:
  serviceName: default-http-backend
  servicePort: 80
 rules:
  - host: dexter.com.br
    http:
     paths:
     - path: /
       backend:
        serviceName: site-dexter
servicePort: 80
